<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NMedia</string>
    <string name="nmedia">NMedia!</string>
    <string name="remove_menu">Remove</string>
    <string name="edit">Edit</string>
    <string name="post_text">Post text</string>
    <string name="chooser_repost_post">Repost post</string>
    <string name="views" translatable="false">Views</string>
    <string name="menu" translatable="false">menu</string>
    <string name="likes" translatable="false">likes</string>
    <string name="reposts" translatable="false">reposts</string>
    <string name="view_pic" translatable="false">view_pic</string>
    <string name="content" translatable="false">content</string>
    <string name="container" translatable="false">container</string>
    <string name="save" translatable="false">save</string>
    <string name="cancel" translatable="false">cancel</string>
    <string name="description_post_save" translatable="false">description_post_save</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="google_play_unavailable">Google Api Unavailable</string>
    <string name="notification_new_post">User %1$s posted a new post:</string>
    <string name="empty_posts">There are no posts.\nIf you create a new post, it will appear here</string>
    <string name="error_loading">Something went wrong. Try again later</string>
    <string name="retry_loading">Retry</string>
    <string name="error">An error occurred</string>
    <string name="recent_posts">Recent posts</string>
    <string name="play_image">Image</string>
    <string name="preview">Preview</string>
    <string name="description_select_photo">Select photo</string>
    <string name="description_take_photo">Take photo</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="author">Name</string>
    <string name="password_confirm">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_out_dialog">Are you sure?</string>
    <string name="but_yes">YES</string>
    <string name="but_no">NO</string>
    <string name="ad_description">Ad</string>
</resources>